--- a/desafio2/index.html
+++ b/desafio2/index.html
@@ -19,7 +19,7 @@
         <img src="imagem/foto-pet.png" alt="">
         <section>
             <h1>pet shop mundo animal feliz</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim magnam vel neque modi commodi, rerum sunt cupiditate error atque repellendus odio temporibus aperiam iusto. Illo amet modi voluptatum animi eveniet.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim magnam vel neque modi commodi, rerum sunt cupiditate error atque repellendus odio temporibus aperiam iusto. Illo amet modi voluptatum animi eveniet a .</p>
             <button class="botao-final">saiba mais</button>
         </section>
     </main>
